--- a/Carnap/Carnap.cabal
+++ b/Carnap/Carnap.cabal
@@ -56,6 +56,7 @@ library
                      , Carnap.Languages.PurePropositional.Logic.HuthAndRyan
                      , Carnap.Languages.PurePropositional.Logic.IchikawaJenkins
                      , Carnap.Languages.PurePropositional.Logic.KalishAndMontague
+                     , Carnap.Languages.PurePropositional.Logic.KooSL
                      , Carnap.Languages.PurePropositional.Logic.Lande
                      , Carnap.Languages.PurePropositional.Logic.Lemmon
                      , Carnap.Languages.PurePropositional.Logic.Magnus
